--- a/app/views/requests/_new_available.html.erb
+++ b/app/views/requests/_new_available.html.erb
@@ -35,4 +35,4 @@ else
         display_pickup_locations + display_delivery_times_link
   }
 end %>
-<%= submit_tag 'Submit' if pickup_locations.length > 1 %>
+<%= submit_tag 'Submit' %>
