--- a/app/views/requests/_new_offsite.html.erb
+++ b/app/views/requests/_new_offsite.html.erb
@@ -10,9 +10,9 @@ display_request_option {
     content_tag(:p) {
       "Request this entire item.
       It will be held for you at the circulation desk of the specified pickup location.
-      Items are ready for pickup within 2 business days.".html_safe +
-        "(Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)".html_safe +
-         display_scan_elements
+      Items are ready for pickup within 2 business days.
+      (Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)".html_safe +
+      display_scan_elements
     }
 } %>
 <%= submit_tag 'Submit' %>
