--- a/app/views/requests/_new_available.html.erb
+++ b/app/views/requests/_new_available.html.erb
@@ -13,9 +13,9 @@ if (nyu_sub_libraries.include?(sub_library_code))
   display_request_option {
     radio_button_tag("entire",  "no") + 
       content_tag(:p) {
-        "Request that portions of the item be scanned and delivered electronically.".html_safe +
-          "(Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)".html_safe +
-           display_scan_elements
+        "Request that portions of the item be scanned and delivered electronically.
+        (Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)".html_safe +
+        display_scan_elements
       }
   }
 else
