--- a/app/views/requests/_new_available.html.erb
+++ b/app/views/requests/_new_available.html.erb
@@ -8,7 +8,7 @@
       radio_button_tag("entire",  "yes", :checked => true) +
         content_tag(:p, "Request this item to be delivered to an NYU Library of your choice.") +
           display_pickup_locations + display_delivery_times_link
-    end %><br /><br />
+    end %><br />
     <%= # Scan portion
     display_request_option do
       radio_button_tag("entire",  "no") + 
