--- a/app/views/requests/_new_offsite.html.erb
+++ b/app/views/requests/_new_offsite.html.erb
@@ -11,8 +11,8 @@ display_request_option {
     content_tag(:p) {
       "Request this entire item.
       It will be held for you at the circulation desk of the specified pickup location.
-      Items are ready for pickup within 2 business days.
-      (Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)".html_safe +
+      Items are ready for pickup within 2 business days.<br />
+      (Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)<br />".html_safe +
       display_scan_elements
     }
 } %>
