--- a/app/views/resolve/_holding.html.erb
+++ b/app/views/resolve/_holding.html.erb
@@ -12,66 +12,68 @@ unless holdings.empty? %>
       view_data = p.view_data
       # Only display holdings that aren't expired.
       unless view_data[:expired] == true %>
-        <div class="row-fluid umlaut-holding">
-          <div class="span3"><strong><%= view_data[:collection_str] %></strong></div>
-          <div class="span4"><%= view_data[:call_number]%></div><%
-          # Set status class based on configured available statuses
-          status_class = 
-            umlaut_config.holdings.available_statuses.include?(view_data[:status]) ? 
-              'available' : '' %>
-          <div class="span3 <%= status_class %>"><%= view_data[:status] %></div>
-          <div class="span2">
-            <%= link_to("More Info", {:controller=>"link_router", :id=>p.id}, 
-              :target => "_blank", :class=>"btn btn-success") %>
-            <%= # Request link
-            request_instance_attributes_set(view_data[:source_data])
-            if request?
-              # Generate a hyperlink for standard service action with
-              # class "ajax_window" for unobtrusive JS.
-              if current_user and view_data[:request_link_supports_ajax_call]
-                link_to("Request", new_request_url(p.id), :target=>"_blank", 
-                  :class=>"btn btn-primary ajax_window")
-              elsif current_user # Ordinary href link to request_url (without ajax_window class).
-                link_to("Request", new_request_url(p.id), :target=>"_blank", 
-                  :class=>"btn btn-primary")
-              else #Send to login screen.
-                link_to("Request", login_url({:return_url=>current_permalink_url, 
-                  :service_response_id=>p.id}), :target=>"_blank", :class=>"btn btn-primary")
-              end
-            end %>
-          </div>
-        </div>
-        <% # Display edition info
-        if (not view_data[:match_reliability].blank?) and 
-          view_data[:match_reliability] != ServiceResponse::MatchExact %>
+        <div class="umlaut-holding">
           <div class="row-fluid">
-            <div class="span11 offset1">
-              <div class="umlaut-content-indent edition_information">
-                <% unless view_data[:edition_str].blank? %>
-                  <em class="text-info">Edition information</em> <%= view_data[:edition_str] %>
-                <% else %>
-                  <em class="text-info">May be alternate edition.</em>
-                <% end %>
-              <div>
-            </div>
-          </div><%
-        end
-        # Display notes
-        unless view_data[:notes].blank? %>
-          <div class="row-fluid notes">
-            <div class="span11 offset1"><%= view_data[:notes] %></div>
-          </div><%
-        end
-        # Display coverage
-        unless view_data[:coverage].blank? %>
-          <div class="row-fluid coverage">
-            <div class="span11 offset1"><%=
-              list_with_limit("copies_#{p.id}", view_data[:coverage_str_array]) do |item, index| %>
-                <li><%= item %></li><%
+            <div class="span3"><strong><%= view_data[:collection_str] %></strong></div>
+            <div class="span4"><%= view_data[:call_number]%></div><%
+            # Set status class based on configured available statuses
+            status_class = 
+              umlaut_config.holdings.available_statuses.include?(view_data[:status]) ? 
+                'available' : '' %>
+            <div class="span3 <%= status_class %>"><%= view_data[:status] %></div>
+            <div class="span2">
+              <%= link_to("More Info", {:controller=>"link_router", :id=>p.id}, 
+                :target => "_blank", :class=>"btn btn-success") %>
+              <%= # Request link
+              request_instance_attributes_set(view_data[:source_data])
+              if request?
+                # Generate a hyperlink for standard service action with
+                # class "ajax_window" for unobtrusive JS.
+                if current_user and view_data[:request_link_supports_ajax_call]
+                  link_to("Request", new_request_url(p.id), :target=>"_blank", 
+                    :class=>"btn btn-primary ajax_window")
+                elsif current_user # Ordinary href link to request_url (without ajax_window class).
+                  link_to("Request", new_request_url(p.id), :target=>"_blank", 
+                    :class=>"btn btn-primary")
+                else #Send to login screen.
+                  link_to("Request", login_url({:return_url=>current_permalink_url, 
+                    :service_response_id=>p.id}), :target=>"_blank", :class=>"btn btn-primary")
+                end
               end %>
             </div>
-          </div><%
-        end
+          </div>
+          <% # Display edition info
+          if (not view_data[:match_reliability].blank?) and 
+            view_data[:match_reliability] != ServiceResponse::MatchExact %>
+            <div class="row-fluid">
+              <div class="span11 offset1">
+                <div class="umlaut-content-indent edition_information">
+                  <% unless view_data[:edition_str].blank? %>
+                    <em class="text-info">Edition information</em> <%= view_data[:edition_str] %>
+                  <% else %>
+                    <em class="text-info">May be alternate edition.</em>
+                  <% end %>
+                <div>
+              </div>
+            </div><%
+          end
+          # Display notes
+          unless view_data[:notes].blank? %>
+            <div class="row-fluid notes">
+              <div class="span11 offset1"><%= view_data[:notes] %></div>
+            </div><%
+          end
+          # Display coverage
+          unless view_data[:coverage].blank? %>
+            <div class="row-fluid coverage">
+              <div class="span11 offset1"><%=
+                list_with_limit("copies_#{p.id}", view_data[:coverage_str_array]) do |item, index| %>
+                  <li><%= item %></li><%
+                end %>
+              </div>
+            </div><%
+          end %>
+        </div><%
       end
     end %>
   </div><%
