Update UserSession#additional_attributes to only update Aleph permissions if user record is expired or there are no Aleph permissions. Pass return url and current institution to resolve login path. Add tests for both updates.

--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -15,10 +15,10 @@
         <div><a href="http://library.nyu.edu/"><span>NYU Libraries</span></a></div>
         <h1><%= umlaut_config.app_name %></h1>
       </header>
-      <% if permalink = current_permalink_url() %>
+      <% if current_permalink_url %>
         <nav class="umlaut-resolve-nav">
           <%= permalink_nav %>
-          <%= login %>
+          <%= login(:return_url => current_permalink_url, "umlaut.institution" => institution.code ) %>
         </nav>
       <% end %>
       <div class="container-fluid <%= "umlaut-#{params[:controller]}-container" %>">
