Only run Sfx4 Ns tests if the connection is configured. Add tests for institutional template rendering.

--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -10,7 +10,7 @@
     <%= render_umlaut_head_content %>
   </head>
   <body>
-    <div class="umlaut-container">
+    <div class="container umlaut-container">
       <header id="header" class="header">
         <div><a href="http://library.nyu.edu/"><span>NYU Libraries</span></a></div>
         <h1><%= umlaut_config.app_name %></h1>
