Add HSL support and custom resolve CSS's per institution.

--- a/app/assets/stylesheets/resolve_nyuad.css.scss
+++ b/app/assets/stylesheets/resolve_nyuad.css.scss
@@ -3,10 +3,16 @@
 @include all-icons-sprites;
 @import "nyulibraries/variables";
 @import "resolve/variables";
+@import "nyulibraries/nyuad/variables";
 @import "nyulibraries/header";
+@import "nyulibraries/nyuad/header";
 @import "nyulibraries/login";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
 @import "umlaut";
 @import "nyulibraries/misc";
 @import "resolve/common";
+
+header {
+  margin-top: 0 !important;
+}
