--- a/app/assets/stylesheets/resolve_hsl.css.scss
+++ b/app/assets/stylesheets/resolve_hsl.css.scss
@@ -3,7 +3,9 @@
 @include all-icons-sprites;
 @import "nyulibraries/variables";
 @import "resolve/variables";
+@import "nyulibraries/hsl/variables";
 @import "nyulibraries/header";
+@import "nyulibraries/hsl/header";
 @import "nyulibraries/login";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
