--- a/app/assets/stylesheets/resolve_ns.css.scss
+++ b/app/assets/stylesheets/resolve_ns.css.scss
@@ -3,10 +3,13 @@
 @include all-icons-sprites;
 @import "nyulibraries/variables";
 @import "resolve/variables";
+@import "nyulibraries/ns/variables";
 @import "nyulibraries/header";
+@import "nyulibraries/ns/header";
 @import "nyulibraries/login";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
 @import "umlaut";
 @import "nyulibraries/misc";
+@import "nyulibraries/ns/misc";
 @import "resolve/common";
