--- a/app/views/holding_requests/_new_available.html.erb
+++ b/app/views/holding_requests/_new_available.html.erb
@@ -1,39 +1,47 @@
-<%= display_request_form("available") do %><%
-  nyu_sub_libraries = ["BOBST", "NCOUR"]
-  ad_sub_libraries = ["NABUD", "NADEX"]
-  afc_sub_libraries = ["BAFC"]
-  if (nyu_sub_libraries.include?(sub_library_code)) %>
-    <%= # Whole item
-    display_request_option do
-      radio_button_tag("entire",  "yes", :checked => true) +
-        content_tag(:p, "Request this item to be delivered to an NYU Library of your choice.") +
-          display_pickup_locations + display_delivery_times_link
-    end %><br />
-    <%= # Scan portion
-    display_request_option do
-      radio_button_tag("entire",  "no") + 
-        content_tag(:p) {
-          "Request that portions of the item be scanned and delivered electronically.<br />
-          (Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)<br />".html_safe +
-          display_scan_elements
-        }
-    end %><%
+<%
+# The 'available' request form
+# Offers the following options:
+#   - If we have an NYU sublibrary, 
+#     - Entire item request
+#     - Scanned portion
+#   - Otherwise set the appropriate request text for the sublibrary
+#     - only offer the entire item option
+%>
+<%
+# Sublibrary constants for determining which options to offer.
+nyu_sub_libraries = ["BOBST", "NCOUR"]
+ad_sub_libraries = ["NABUD", "NADEX"]
+afc_sub_libraries = ["BAFC"]
+%>
+<%= request_form("available") do %>
+<%
+  # NYU sublibraries
+  if (nyu_sub_libraries.include?(sub_library_code))
+%>
+    <% # Entire item request %>
+    <%= entire_item_request_option %>
+    <br />
+    <% # Scanned portion request %>
+    <%= scan_portion_request_option %>
+<%
+  # Other sublibraries
   else
-    request_text = ""
+    # Default request text
+    request_text = "Request this item to be delivered to the pickup location of your choice."
+    # For AFC, use AFC request text
     if (afc_sub_libraries.include?(sub_library_code))
-      request_text += "Request this item for pick up at the Avery Fisher Center on the 2nd floor of the Bobst Library (NYC) or the NYU Abu Dhabi Library (UAE)."
+      request_text = "Request this item for pick up at the Avery Fisher Center on the 2nd floor of the Bobst Library (NYC) or the NYU Abu Dhabi Library (UAE)."
+    # For Abu Dhabi, use Abu Dhabi request text
     elsif (ad_sub_libraries.include?(sub_library_code))
-      request_text += "Request this item."
+      request_text = "Request this item."
       request_text += "It will be held for you at the specified pickup location."
       request_text += "Items are ready for pickup within 2 business days."
-    else
-      request_text += "Request this item to be delivered to the pickup location of your choice."
     end %>
-    <%= # Whole item
-    display_request_option do
-        content_tag(:p, request_text) +
-          display_pickup_locations + display_delivery_times_link
-    end %><%
+    <% # Entire item request %>
+    <%= request_option {
+      content_tag(:p, request_text) +
+        pickup_locations_fields + delivery_times } %>
+<%
   end %>
   <%= submit_tag 'Submit' %>
 <% end %>
