--- a/app/views/holding_requests/_new_offsite.html.erb
+++ b/app/views/holding_requests/_new_offsite.html.erb
@@ -1,20 +1,12 @@
-<%= display_request_form("offsite") do %>
-<%= # Whole item
-display_request_option {
-  radio_button_tag("entire",  "yes", :checked => true) +
-    content_tag(:p, "Request this item to be delivered to an NYU Library of your choice.") +
-      display_pickup_locations + display_delivery_times_link
-} %><br />
-<%= # Scan portion
-display_request_option {
-  radio_button_tag("entire",  "no") + 
-    content_tag(:p) {
-      "Request this entire item.
-      It will be held for you at the circulation desk of the specified pickup location.
-      Items are ready for pickup within 2 business days.<br />
-      (Requests must be within <a href=\"http://library.nyu.edu/copyright/#fairuse\" target=\"_blank\">fair use guidelines</a>.)<br />".html_safe +
-      display_scan_elements
-    }
-} %>
-<%= submit_tag 'Submit' %>
+<%
+# The 'offsite' request form 
+# Offers the following options for offsite materials
+#   - Entire item request
+#   - Scanned portion
+%>
+<%= request_form("offsite") do %>
+  <%= entire_item_request_option %>
+  <br />
+  <%= scan_portion_request_option %>
+  <%= submit_tag 'Submit' %>
 <% end %>
