--- a/app/views/resolve/_holding.html.erb
+++ b/app/views/resolve/_holding.html.erb
@@ -12,8 +12,8 @@ unless holdings.empty? %>
         "http://library.nyu.edu/bobcat/callno/",
           :target=>"_blank") %></strong></p><%
     # Process each holding.
-    holdings.each do |p|
-      view_data = p.view_data
+    holdings.each do |service_response|
+      view_data = service_response.view_data
       # Only display holdings that aren't expired.
       unless view_data[:expired] == true %>
         <div class="umlaut-holding">
@@ -26,24 +26,11 @@ unless holdings.empty? %>
                 'text-success' : '' %>
             <div class="span3 <%= status_class %>"><%= view_data[:status] %></div>
             <div class="span2">
-              <%= link_to("More Info", {:controller=>"link_router", :id=>p.id}, 
-                :target => "_blank", :class=>"btn btn-success") %>
-              <%= # Request link
-                if view_data[:source_data] and holding_request?(view_data[:status], view_data[:status_code], view_data[:requestability], 
-                  view_data[:source_data][:adm_library_code], view_data[:source_data][:sub_library_code])
-                # Generate a hyperlink for standard service action with
-                # class "ajax_window" for unobtrusive JS.
-                if current_user and view_data[:request_link_supports_ajax_call]
-                  link_to("Request", new_holding_request_url(p.id), :target=>"_blank", 
-                    :class=>"btn btn-primary ajax_window")
-                elsif current_user # Ordinary href link to request_url (without ajax_window class).
-                  link_to("Request", new_holding_request_url(p.id), :target=>"_blank", 
-                    :class=>"btn btn-primary")
-                else #Send to login screen.
-                  link_to("Request", login_url({:return_url=>current_permalink_url, 
-                    :service_response_id=>p.id}), :target=>"_blank", :class=>"btn btn-primary")
-                end
-              end %>
+              <% # More info link %>
+              <%= link_to("More Info", { controller: "link_router", id: service_response.id }, 
+                target: "_blank", class: "btn btn-success" ) %>
+              <% # Request link %>
+              <%= render("request_link", service_response: service_response) if requestable?(service_response) %>
             </div>
           </div>
           <% # Display edition info
@@ -71,7 +58,7 @@ unless holdings.empty? %>
           unless view_data[:coverage].blank? %>
             <div class="row-fluid coverage">
               <div class="span11 offset1"><%=
-                list_with_limit("copies_#{p.id}", view_data[:coverage_str_array]) do |item, index| %>
+                list_with_limit("copies_#{service_response.id}", view_data[:coverage_str_array]) do |item, index| %>
                   <li><%= item %></li><%
                 end %>
               </div>
