Refactor holding requests.

--- a/app/views/holding_requests/_new_available.html.erb
+++ b/app/views/holding_requests/_new_available.html.erb
@@ -19,7 +19,7 @@ afc_sub_libraries = ["BAFC"]
   if (nyu_sub_libraries.include?(sub_library_code))
 %>
     <% # Entire item request %>
-    <%= entire_item_request_option %>
+    <%= entire_request_option %>
     <br />
     <% # Scanned portion request %>
     <%= scan_portion_request_option %>
