--- a/app/views/holding_requests/_new_offsite.html.erb
+++ b/app/views/holding_requests/_new_offsite.html.erb
@@ -5,7 +5,7 @@
 #   - Scanned portion
 %>
 <%= request_form("offsite") do %>
-  <%= entire_item_request_option %>
+  <%= entire_request_option %>
   <br />
   <%= scan_portion_request_option %>
   <%= submit_tag 'Submit' %>
