--- a/app/views/holding_requests/_new_on_order.html.erb
+++ b/app/views/holding_requests/_new_on_order.html.erb
@@ -1,3 +1,6 @@
+<%
+# The 'on order' request option
+%>
 <%= request_form("on_order") do %>
   <%= request_option do %>
     <%= request_link_or_text(
