--- a/app/views/holding_requests/_new_recall.html.erb
+++ b/app/views/holding_requests/_new_recall.html.erb
@@ -5,13 +5,9 @@
   <%= request_option do %>
     <% if holding.requested? %>
       This material has been requested by a fellow library user.
-      <%= request_link_or_text(
-        "You may also place a request to be added to the queue.", 
-          "recall") %>
+      <%= request_link_or_text("You may also place a request to be added to the queue.", "recall") %>
     <% else %>
-      <%= request_link_or_text(
-        "Recall this item from a fellow library user.", 
-          "recall") %>
+      <%= request_link_or_text("Recall this item from a fellow library user.", "recall") %>
       The item will be available within
       <%= ["BAFC"].include?(holding.sub_library_code) ? "1 week" : "2 weeks" %>.<br />
     <% end %>
