Only show delivery help if there is more than one option.

--- a/app/views/holding_requests/new.html.erb
+++ b/app/views/holding_requests/new.html.erb
@@ -14,5 +14,5 @@
     <%= render "new_ill", service_response_id: @service_response_id if @authorizer.ill? %>
   </ol>
   <p style="margin-top: 1em;"><strong>You will be notified by email when your item is ready or en route.</strong></p>
-  <%= link_to_delivery_help %>
+  <%= delivery_help %>
 </div>
