Update newrelic gem. Update title query and search type on full search form for tablets.

--- a/app/assets/stylesheets/search/_common.scss
+++ b/app/assets/stylesheets/search/_common.scss
@@ -32,3 +32,14 @@ div.rfr_id {
     width: 500px;
   }
 }
+
+
+.form-horizontal {
+  .title_search_type {
+    margin-bottom: 5px !important;
+  }
+
+  .title_search {
+    vertical-align: top !important;
+  }
+}
