--- a/app/assets/stylesheets/resolve_nyuad.css.scss
+++ b/app/assets/stylesheets/resolve_nyuad.css.scss
@@ -12,6 +12,7 @@
 @import "umlaut";
 @import "nyulibraries/misc";
 @import "resolve/common";
+@import "resolve/permalink";
 
 header {
   margin-top: 0 !important;
