Include hidden institution field on the short form :bug:

--- a/app/views/search/_short_form.html.erb
+++ b/app/views/search/_short_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag({:controller=>'search', :action=>'journal_search'}, {:method => "get", :class => "form-inline form-very-inline", :name => "OpenURL", :id=>"OpenURL"}) do %>
+  <%= hidden_field_tag "umlaut.institution", "#{(current_primary_institution.nil?) ? "NYU" : current_primary_institution.code}" %> 
   <%= hidden_field_tag "rfr_id", "info:sid/sfxit.com:citation" %> 
   <%= hidden_field_tag "rft.title", "", {:class => "rft_title"} %> 
   <%= hidden_field_tag "rft.object_id", "", {:class => "rft_object_id"} %> 
