Change from E-Journals A-Z to Journals for consistency :rainbow:

--- a/app/views/nyush/_sidebar.html.erb
+++ b/app/views/nyush/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <%= sidebar_section("help", content_tag(:h2, "Need help?")) do %>
   <ul class="nav-list">
-    <li><a href="http://library.nyu.edu/help/ejournals.html" target="_blank">Help using the E-Journals A-Z tab</a></li>
+    <li><a href="http://library.nyu.edu/help/ejournals.html" target="_blank">Help using the Journals tab</a></li>
     <li><a href="http://library.nyu.edu/shanghai" target="_blank" id="sh_aal">Ask a NYU Shanghai Librarian</a></li>
     <li><a href="https://library.nyu.edu/ask/" target="_blank" id="ny_aal">Ask a NY Librarian</a></li>
   </ul>
