Update to for custom NYU highlighting and ordering of service responses on resolution screens.  Also changed the header text.

--- a/app/views/umlaut/_header.html.erb
+++ b/app/views/umlaut/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="header"><h1><%= umlaut_config.header_title %> @ <%= current_primary_institution.name %></h1></header>
+<header class="header"><h1><%= current_primary_institution.name %></h1></header>
 <nav id="nav1">
   <%= render_umlaut_permalink %>
   <ul class="nyu-login">
