Update resolve styles for consortium and GNU campuses

--- a/app/assets/stylesheets/resolve_cu.css.scss
+++ b/app/assets/stylesheets/resolve_cu.css.scss
@@ -13,3 +13,9 @@
 @import "nyulibraries/misc";
 @import "resolve/common";
 @import "resolve/permalink";
+
+.header {
+  h1 {
+    color: #560d06;
+  }
+}
