--- a/app/assets/stylesheets/resolve_ns.css.scss
+++ b/app/assets/stylesheets/resolve_ns.css.scss
@@ -14,3 +14,11 @@
 @import "nyulibraries/ns/misc";
 @import "resolve/common";
 @import "resolve/permalink";
+
+body {
+  background-image: url(http://library.newschool.edu/img/bg.png);
+}
+
+.header h1 {
+  color: #f05123;
+}
