--- a/app/assets/stylesheets/resolve_nyush.css.scss
+++ b/app/assets/stylesheets/resolve_nyush.css.scss
@@ -12,3 +12,9 @@
 @import "nyulibraries/misc";
 @import "resolve/common";
 @import "resolve/permalink";
+
+header {
+  h1 {
+    color: #57068c;
+  }
+}
