Try purple on for size

--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -15,3 +15,12 @@
 .help-text-icon {
   display: none;
 }
+
+.header, nav {
+  background-color: #57068c;
+  // background-color: #a4121f;
+  h1, .login, .logout {
+    color: white;
+  }
+}
+
